# dragonlord

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs
examples/: quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: .rustc_info.json  config.rs  ctx.rs  dev_db.rs  error.rs  log.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_tickets.rs
src/web/rpc/: mod.rs  task_rpc.rs
tests/: quick_dev.rs
web-folder/: index.html
