[package]
name = "dragonlord"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "3.0.0"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
