[package]
name = "dragonlord"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.

[lints]
workspace = true

[workspace]
resolver = "2"
members = [
    "crates/libs/lib-utils",
    "crates/libs/lib-rpc",
    "crates/libs/lib-auth",
    "crates/libs/lib-core",

    "crates/services/web-server",
    "crates/tools/gen-key"
]
